Expand README with comprehensive Java and Spring Boot topics
Added detailed sections on Java mechanics, garbage collection, collections, concurrency, Spring Boot architecture, and system design principles.